--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Meu Resumo</title>
+  <title>Meu Curriculo</title>
 </head>
 
 <body>
