Alteração e inclusão das imagens skills

--- a/index.html
+++ b/index.html
@@ -1,35 +1,47 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt" lang="pt">
+<!DOCTYPE html>
+<html>
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Meu Curriculo</title>
 </head>
 
 <body>
   <div id="page-wrap">
-    <img src="images/1995515.svg" alt="Photo of Cthulu" id="pic" />
+    <img src="images/1995515.svg" id="pic" />
 
     <div id="contact-info" class="vcard">
       <h1 class="fn">Emerson Ferreira da Silva</h1>
       <p>
-        <div class="imgCel">
-          <a href="https://web.whatsapp.com/" target="_blank"><img src="images/icons/social-023_whatsapp.png">
-            <span class="tel">94350-2401</span><br />
+        <div class="imgSocial">
+          <img src="images/icons/socialIcons/social-023_whatsapp.png">
+          <span class="tel">94350-2401</span><br />
           </a>
-          <a href="hthttps://mail.google.com/" target="_blank">
-            <img src="images/icons/social-067_gmail.png">
+          <a href="mailto: emersonfdasilva2@gmail.com" target="_blank">
+            <img src="images/icons/socialIcons/social-067_gmail.png">
             <span>emersonfdasilva2@gmail.com</span><br />
           </a>
-          <a href="https://github.com/emfsilva" target="_blank"><img src="images/icons/social-041-round_github.png">
+          <a href="https://github.com/emfsilva" target="_blank">
+            <img src="images/icons/socialIcons/social-041-round_github.png">
             <span>https://github.com/emfsilva</span><br />
           </a>
 
-          <a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="_blank"><img
-              src="images/icons/social-011_linkedin.png">
+          <a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="_blank">
+            <img src="images/icons/socialIcons/social-011_linkedin.png">
             <span class="span">emersonferreirasilva1992</span><br />
+          </a>
+
+          <a href="https://www.google.com/maps/place/R.+Asp%C3%A1sia+-+Vila+Silviania,
+          +Carapicu%C3%ADba+-+SP/data=
+          !4m2!3m1!1s0x94cf0031f202b5fd:0x6ded66ba5cdef530?sa=X&ved=2ahUKEwjTud-
+          4nMXkAhUND7kGHQU1Ch8Q8gEwAHoECAoQAQ target=" _blank">
+            <img src="images/icons/socialIcons/local.jpg">
+            <span class="span">Rua Aspásia, Vila Silviania - Carapicuiba</span><br />
+          </a>
+          <img src="images/icons/socialIcons/niver.jpg">
+          <span class="span">27 anos</span><br />
           </a>
         </div>
       </p>
@@ -37,8 +49,10 @@
     <div id="Objetivo">
       <p>
         Carreira em desenvolvimento na área de programação, como programador
-        junior, formado em analise e desenvolvimento de sistemas pela
-        Universidade Uninove no ano de 2019.
+        junior.<br> Formado em analise e desenvolvimento de sistemas pela
+        Universidade Uninove no ano de 2019. Possuo conhecimentos acadêmicos
+        e básicos em algumas linguagens de programação, frameworks, bibliotecas e
+        banco de dados.
       </p>
     </div>
 
@@ -46,7 +60,9 @@
     <dl>
       <dd class="clear"></dd>
 
-      <dt>Educação</dt>
+      <dt class="dtcongif">
+        <img src="images/icons/estudos.png">
+      </dt>
       <dd>
         <h2>Centro Universitario Nove de Julho</h2>
         <p>
@@ -57,48 +73,47 @@
 
       <dd class="clear"></dd>
 
-      <dt class="dtSkills">Skills</dt>
+      <dt class="dtcongif dtSkills">
+        <img src="images/icons/skills.png">
+      </dt>
       <dd>
 
         <h2></h2>
         <p>
           <ul class="skills">
-            <li>Java Básico </li>
             <ul>
-              <li>Java Server Faces</li>
-              <li>XML</li>
-              <li>XHTML</li>
-              <li>Ajax</li>
-              <li>Maven</li>
+              <img src="images/icons/devIcons/java.svg">
+              <img src="images/icons/devIcons/jsf.png">
+              <img src="images/icons/devIcons/nodejs.svg">
             </ul>
 
-            <li>JavaScript Básico</li>
             <ul>
-              <li>NodeJs </li>
-              <li>React </li>
-            </ul>
-            <li>Git</li>
-            <ul>
-              <li>Git extensions</li>
-              <li>GitHub</li>
-              <li>Markdown</li>
+              <img src="images/icons/devIcons/html5.svg">
+              <img src="images/icons/devIcons/css3.svg">
+              <img src="images/icons/devIcons/js_badge.svg">
+              <img src="images/icons/devIcons/react.svg">
             </ul>
 
-            <li>Outras Tecnologias</li>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>SQL básico</li>
-              <li>Linux</li>
-              <li>Manutenção de microcomputadores</li>
+              <img src="images/icons/devIcons/linux.svg">
+              <img src="images/icons/devIcons/mysql.svg">
             </ul>
-          </ul>
+
+            <ul>
+              <img src="images/icons/devIcons/git.svg">
+              <img src="images/icons/devIcons/gitLab.svg">
+              <img src="images/icons/devIcons/gitext.png">
+              <img src="images/icons/devIcons/github_full.svg">
+              <img src="images/icons/devIcons/markdown.png">
+            </ul>
         </p>
       </dd>
 
       <dd class="clear"></dd>
 
-      <dt class="dtSkills">Experiencia</dt>
+      <dt class="dtcongif dtSkills">
+        <img src="images/icons/work.png">
+      </dt>
       <dd>
         <h2>
           BRQ
@@ -141,7 +156,9 @@
 
       <dd class="clear"></dd>
 
-      <dt class="dtSkills">Cursos</dt>
+      <dt class="dtcongif dtSkills">
+        <img src="images/icons/cursos.png">
+      </dt>
       <dd>
         <p>
           <ul>
@@ -187,7 +204,9 @@
 
       <dd class="clear"></dd>
 
-      <dt>Idiomas</dt>
+      <dt class="dtcongif dtSkills">
+        <img src="images/icons/estudos2.png">
+      </dt>
       <dd>Inglês - Técnico</dd>
       <dd>Espanhol - Acadêmico</dd>
       <dd>Português - Técnico</dd>
