Alteração nas linhas

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       <dd class="clear"></dd>
 
-      <dt class="dtcongif dtSkills">
+      <dt class="dtcongif dtlista">
         <img src="images/icons/work.png">
       </dt>
       <dd>
@@ -156,7 +156,7 @@
 
       <dd class="clear"></dd>
 
-      <dt class="dtcongif dtSkills">
+      <dt class="dtcongif dtCursos">
         <img src="images/icons/cursos.png">
       </dt>
       <dd>
@@ -204,7 +204,7 @@
 
       <dd class="clear"></dd>
 
-      <dt class="dtcongif dtSkills">
+      <dt class="dtcongif">
         <img src="images/icons/estudos2.png">
       </dt>
       <dd>Inglês - Técnico</dd>
