--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
         <img src="images/icons/estudos2.png">
       </dt>
       <dd>Inglês - Técnico</dd>
-      <dd>Espanhol - Acadêmico</dd>
-      <dd>Português - Técnico</dd>
+      <dd>Espanhol - Técnico</dd>
+      <dd>Português - Nátivo</dd>
 
       <dd class="clear"></dd>
     </dl>
