adicionando outro certificado

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
             <ul>
               <li>Introdução ao Git e Controle de Versões</li>
               <li>Programação para Internet com JavaScript</li>
+              <li>Introdução ao GitHub e comandos essenciais para trabalhar em equipe</li>
             </ul>
             <li>Alura</li>
             <ul>
