--- a/index.html
+++ b/index.html
@@ -2,229 +2,49 @@
 <html>
 
 <head>
-  <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Meu Curriculo</title>
+    <meta charset="utf-8">
+    <title>My Page</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+
 </head>
+<body class="body">
+    <header>
+        <div class="header">
+          <div class="logo">
+            <div class="logoimg"><img src="assets/images/logo.png"></div>
+          </div>
+          <div class="logonome">EmersoN Ferreira da Silva</div>
+          <div class="menu">
+            <nav>
+              <ul>
+                <li class="active"><a href="">Home</a></li>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Projetos</a></li>
+                <li><a href="" target="_blank">Curriculo</a></li>
 
-<body>
-  <div id="page-wrap">
-    <img src="images/1995515.svg" id="pic" />
-
-    <div id="contact-info" class="vcard">
-      <h1 class="fn">Emerson Ferreira da Silva</h1>
-      <p>
-        <div class="imgSocial">
-          <img src="images/icons/socialIcons/social-023_whatsapp.png">
-          <span class="tel">94350-2401</span><br />
-          </a>
-          <a href="mailto: emersonfdasilva2@gmail.com" target="_blank">
-            <img src="images/icons/socialIcons/social-067_gmail.png">
-            <span>emersonfdasilva2@gmail.com</span><br />
-          </a>
-          <a href="https://github.com/emfsilva" target="_blank">
-            <img src="images/icons/socialIcons/social-041-round_github.png">
-            <span>https://github.com/emfsilva</span><br />
-          </a>
-
-          <a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="_blank">
-            <img src="images/icons/socialIcons/social-011_linkedin.png">
-            <span class="span">emersonferreirasilva1992</span><br />
-          </a>
-
-          <a href="https://www.google.com/maps/place/R.+Asp%C3%A1sia+-+Vila+Silviania,
-          +Carapicu%C3%ADba+-+SP/data=
-          !4m2!3m1!1s0x94cf0031f202b5fd:0x6ded66ba5cdef530?sa=X&ved=2ahUKEwjTud-
-          4nMXkAhUND7kGHQU1Ch8Q8gEwAHoECAoQAQ target=" _blank">
-            <img src="images/icons/socialIcons/local.jpg">
-            <span class="span">Rua Aspásia, Vila Silviania - Carapicuiba</span><br />
-          </a>
-          <img src="images/icons/socialIcons/niver.jpg">
-          <span class="span">27 anos</span><br />
-          </a>
+              </ul>
+            </nav>
+          </div>
         </div>
-      </p>
-
-    </div>
-    <div id="Objetivo">
-      <p>
-        Carreira em desenvolvimento na área de programação, como programador
-        junior.<br> Formado em analise e desenvolvimento de sistemas pela
-        Universidade Uninove no ano de 2019. Possuo conhecimentos acadêmicos
-        e básicos em algumas linguagens de programação, frameworks, bibliotecas e
-        banco de dados.
-      </p>
-      <hr>
-    </div>
-
-    <div class="clear"></div>
-    <dl>
-      <dd class="clear"></dd>
-
-      <dt class="dtcongif">
-        <img src="images/icons/estudos.png">
-      </dt>
-      <dd>
-        <h2>Centro Universitario Nove de Julho</h2>
-        <p>
-          <strong>Curso:</strong> Análise e Desenvolvimento de Sistemas<br />
-          <strong>Concluido - </strong>06/2019
-        </p>
-        <hr>
-      </dd>
-
-      <dd class="clear"></dd>
-
-
-
-      <dt class="dtcongif dtSkills">
-        <img src="images/icons/skills.png">
-      </dt>
-      <dd>
-
-        <h2></h2>
-        <p>
-          <ul class="skills">
-            <ul>
-              <img src="images/icons/devIcons/java.svg">
-              <img src="images/icons/devIcons/jsf.png">
-              <img src="images/icons/devIcons/nodejs.svg">
-            </ul>
-
-            <ul>
-              <img src="images/icons/devIcons/html5.svg">
-              <img src="images/icons/devIcons/css3.svg">
-              <img src="images/icons/devIcons/js_badge.svg">
-              <img src="images/icons/devIcons/react.svg">
-            </ul>
-
-            <ul>
-              <img src="images/icons/devIcons/linux.svg">
-              <img src="images/icons/devIcons/mysql.svg">
-            </ul>
-
-            <ul>
-              <img src="images/icons/devIcons/git.svg">
-              <img src="images/icons/devIcons/gitLab.svg">
-              <img src="images/icons/devIcons/gitext.png">
-              <img src="images/icons/devIcons/github_full.svg">
-              <img src="images/icons/devIcons/markdown.png">
-            </ul>
-        </p>
-        <hr>
-      </dd>
-
-      <dd class="clear"></dd>
-
-      <dt class="dtcongif dtlista">
-        <img src="images/icons/work.png">
-      </dt>
-      <dd>
-        <h2>
-          BRQ
-          <span>Programador Junior - Atual</span>
-        </h2>
-        <ul>
-          <p>
-            Responsável por auxiliar no desenvolvimento de sistemas e procs,
-            com a utilização da linguagem java, com framework Java Server Faces,
-            com arquitetura awb3 (Bradesco), e banco de dados SQL.
-          </p>
-        </ul>
-
-        <h2>
-          BRQ
-          <span>Estagiario em Programação - 2018 a 2019</span>
-        </h2>
-        <ul>
-          <p>
-            Responsável no periodo de 5 meses por auxiliar no desenvolvimento de
-            sistemas em alta plataforma, com a utilização da linguagem Cobol.<br>
-            Responsavel no periodo de 2 meses pelo desenvolvimento de prototipos
-            funcionais utilizando a linguagem java e framework Java Server Faces,
-            arquitetura awb3 (Bradesco).
-          </p>
-        </ul>
-        <h2>
-          Sequoia Logistica
-          <span>Auxiliar de Almoxarifado - 2014 a 2018</span>
-        </h2>
-        <ul>
-          <p>
-            Responsável pelo recebimento e conferência de entrada e saída dos produtos e notas fiscais através do
-            sistema integrado (ERP WMS), além de atuar na organização de estoque físico e sistêmico, alimentando e
-            desenvolvendo planilhas para controles internos, responsável também pela separação de ordem de trabalho e
-            movimentação de estoque usando empilhadeira manual e elétrica.
-          </p>
-        </ul>
-        <hr>
-      </dd>
-
-      <dd class="clear"></dd>
-
-      <dt class="dtcongif dtCursos">
-        <img src="images/icons/cursos.png">
-      </dt>
-      <dd>
-        <p>
-          <ul>
-            <li>Digital Innovation One</li>
-            <ul>
-              <li>Introdução ao Git e Controle de Versões</li>
-              <li>Programação para Internet com JavaScript</li>
-              <li>Introdução ao GitHub e comandos essenciais para trabalhar em equipe</li>
-            </ul>
-            <li>Alura</li>
-            <ul>
-              <li>Java E JSF I: Sua Aplicação Web Com JSF2</li>
-              <li>Java Parte 7: Trabalhando Com Java.IO</li>
-              <li>Java Parte 6: Conhecendo o Java.UTIL</li>
-              <li>Java Parte 5: Pacotes e Java.LANG</li>
-              <li>Java Parte 4: Entendendo Exceções</li>
-              <li>Java Parte 2: Introdução à Orientação a Objetos</li>
-              <li>Java Parte 1: Primeiros Passos</li>
-              <li>UML Introdução: Modelagem de Soluções</li>
-              <li>Linux I: Conhecendo e Utilizando o Terminal</li>
-            </ul>
-            <li>Escola de Programadores</li>
-            <ul>
-              <li>Cobol com db2</li>
-            </ul>
-            <li>B7Web</li>
-            <ul>
-              <li>HTML e CSS</li>
-              <li>GIT: Versionamento de código</li>
-              <li>Javascript Básico</li>
-              <li>NodeJS</li>
-            </ul>
-
-            <li>Jdev Treinamentos</li>
-            <ul>
-              <li>Lógica de programação e algoritmos</li>
-              <li>Configuração do ambiente Java</li>
-
-            </ul>
-
-          </ul>
-        </p>
-        <hr>
-      </dd>
-
-      <dd class="clear"></dd>
-
-      <dt class="dtcongif">
-        <img src="images/icons/estudos2.png">
-      </dt>
-      <dd>Inglês - Técnico</dd>
-      <dd>Espanhol - Técnico</dd>
-      <dd>Português - Nátivo</dd>
-
-      <dd class="clear"></dd>
-    </dl>
-
-    <div class="clear"></div>
-  </div>
+    </header>
+  <main>
+      <section class="banner">
+        <div class=sliders>
+          <div class="slide">
+           <div class="nome"> Emerson Ferreira da Silva</div>
+            <div class="dev">Desenvolvedor Java</div>
+            <div class="slidearea">
+            <a href="https://github.com/emfsilva" target="__blank"><img class="socialMedia" src="assets/images/social/Github.png"></a>
+             <a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="__blank"><img class="socialMedia" src="assets/images/social/Linkedin.png"></a>
+              <a href="mailto:emersonfdasilva2@gmail.com"><img class="socialMedia" src="assets/images/social/gmail.png"></a>        
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  
+  <footer></footer>
 </body>
-
 </html>
