--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class=sliders>
           <div class="slide">
            <div class="nome"> Emerson Ferreira da Silva</div>
-            <div class="dev">Desenvolvedor Java</div>
+            <div class="dev">Desenvolvedor Júnior</div>
             <div class="slidearea">
             <a href="https://github.com/emfsilva" target="__blank"><img class="socialMedia" src="assets/images/social/Github.png"></a>
              <a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="__blank"><img class="socialMedia" src="assets/images/social/Linkedin.png"></a>
