icon logo tiitle

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My Page</title>
+    <link rel="icon" type="image/png"  href="assets/images/logo.png">
+    <title>Emerson Ferreira da Silva</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
