--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
             <nav>
               <ul>
                 <li class="active"><a href="">Home</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Projetos</a></li>
-                <li><a href="" target="_blank">Curriculo</a></li>
-
+                <!--   <li><a href="">Sobre</a></li>-->
+                <!-- <li><a href="">Projetos</a></li>-->
+                <!-- <li><a href="" target="_blank">Curriculo</a></li>-->
               </ul>
             </nav>
           </div>
@@ -36,9 +35,11 @@
            <div class="nome"> Emerson Ferreira da Silva</div>
             <div class="dev">Desenvolvedor Java</div>
             <div class="slidearea">
-            <a href="https://github.com/emfsilva" target="__blank"><img class="socialMedia" src="assets/images/social/Github.png"></a>
-             <a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="__blank"><img class="socialMedia" src="assets/images/social/Linkedin.png"></a>
-              <a href="mailto:emersonfdasilva2@gmail.com"><img class="socialMedia" src="assets/images/social/gmail.png"></a>        
+              <ul>
+                <li><a href="https://github.com/emfsilva" target="__blank"><img class="socialMedia" src="assets/images/social/Github.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="__blank"><img class="socialMedia" src="assets/images/social/Linkedin.png"></a></li>
+                <li><a href="mailto:emersonfdasilva2@gmail.com"><img class="socialMedia" src="assets/images/social/gmail.png"></a></li>      
+             </ul>
             </div>
           </div>
         </div>
