--- a/index.html
+++ b/index.html
@@ -1,52 +1,350 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png"  href="assets/images/logo.png">
-    <title>Emerson Ferreira da Silva</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Meu portfólio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+    <script src="https://kit.fontawesome.com/8dd542139c.js" crossorigin="anonymous"></script>
+    <style>
+        .foto-perfil {
+            height: 100%;
+            width: auto;
+            max-width: 100%;
+            border-radius: 50%;
+        }
 
+        .corPrimaria {
+            background-color: #333333;
+        }
+
+        .corSecundaria {
+            background-color: #2c3e50;
+        }
+
+        p {
+            font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            color: black !important;
+            font-size: 13px;
+        }
+
+        .icones {
+            padding-left: 5px;
+        }
+
+        .titulosBrancos {
+            text-underline-position: below;
+            padding-bottom: 20px;
+            text-transform: uppercase;
+            font-weight: 500;
+            color: white;
+        }
+
+        .titulosVerdes {
+            text-underline-position: below;
+            padding-bottom: 16px;
+            text-transform: uppercase;
+            font-weight: 500;
+            color: #18bc9c;
+        }
+
+        .textoBranco {
+            color: white !important;
+        }
+
+        .jumbotron {
+            margin-bottom: 0px;
+        }
+
+        .textoFooter {
+            margin: 0px;
+            padding-top: 15px;
+            padding-bottom: 15px;
+        }
+
+        html {
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
-<body class="body">
-    <header>
-        <div class="header">
-          <div class="logo">
-            <div class="logoimg"><img src="assets/images/logo.png"></div>
-          </div>
-          <div class="logonome">EmersoN Ferreira da Silva</div>
-          <div class="menu">
-            <nav>
-              <ul>
-                <li class="active"><a href="">Home</a></li>
-                <!--   <li><a href="">Sobre</a></li>-->
-                <!-- <li><a href="">Projetos</a></li>-->
-                <!-- <li><a href="" target="_blank">Curriculo</a></li>-->
-              </ul>
-            </nav>
-          </div>
+
+<body>
+    <nav class="corSecundaria navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand textoBranco" href="#">Emerson Ferreira da Silva</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link textoBranco" href="#projetos">Projetos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link textoBranco" href="#sobre-mim">Sobre mim</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link textoBranco" href="#depoimentos">Depoimentos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link textoBranco" href="#contato">Contato</a>
+                </li>
+            </ul>
         </div>
-    </header>
-  <main>
-      <section class="banner">
-        <div class=sliders>
-          <div class="slide">
-           <div class="nome"> Emerson Ferreira da Silva</div>
-            <div class="dev">Desenvolvedor Júnior</div>
-            <div class="slidearea">
-              <ul>
-                <li><a href="https://github.com/emfsilva" target="__blank"><img class="socialMedia" src="assets/images/social/Github.png"></a></li>
-                <li><a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="__blank"><img class="socialMedia" src="assets/images/social/Linkedin.png"></a></li>
-                <li><a href="mailto:emersonfdasilva2@gmail.com"><img class="socialMedia" src="assets/images/social/gmail.png"></a></li>      
-             </ul>
+    </nav>
+    <section class="jumbotron text-center corPrimaria">
+        <div class="container">
+            <img class="foto-perfil" src="" alt="">
+            <h1 class="jumbotron-heading textoBranco">Emerson Ferreira da Silva</h1>
+            <p class="lead textoBranco">Programador Júnior</p>
+            <p>
+                <a href="#contato" class="btn btn-dark my-2">Contato</a>
+            </p>
+            <a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="_blank"> <i
+                    class="textoBranco fab fa-linkedin"></i></a>
+            <a href="https://github.com/emfsilva" target="_blank"><i class="textoBranco icones fab fa-github"></i></a>
+        </div>
+    </section>
+    <div class="album py-5 bg-light" id="projetos">
+        <div class="container">
+            <h2 class="jumbotron-heading text-center titulosVerdes">Projetos</h2>
+            <div class="row">
+
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top"
+                            data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                            src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+                        <div class="card-body">
+                            <p class="card-text">Projeto utilizando clone do twitter, apenas front - end (Em Andamento)
+                            </p>
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>Flex-Box</li>
+                            </ul>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="https://distracted-torvalds-45cf2d.netlify.com/" target="_blank"> <button type="button"
+                                            class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
+                                    <a href="https://github.com/emfsilva/Twitter" target="_blank"><button type="button"
+                                            class="btn btn-sm btn-outline-primary">Código</button></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top"
+                            data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                            src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+                        <div class="card-body">
+                            <p class="card-text">Este projeto consiste em um jogo chamado de jokempo, são 3 opçãos, pedra, papel e tesoura.
+                                Pedra ganha de tesoura, tesoura de papel e papel de pedra.
+                            </p>
+                            <ul>
+                                <li>Javascript</li>
+                            </ul>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="https://hardcore-mccarthy-c7e4fe.netlify.com/"> <button type="button"
+                                            class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
+                                    <a href=""><button type="button"
+                                            class="btn btn-sm btn-outline-primary">Código</button></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top"
+                            data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                            src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+                        <div class="card-body">
+                            <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                            </p>
+                            <ul>
+                                <li>C#</li>
+                                <li>Javascript</li>
+                                <li>SQL</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ul>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="github.com/meuprojeto"> <button type="button"
+                                            class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
+                                    <a href=""><button type="button"
+                                            class="btn btn-sm btn-outline-primary">Código</button></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top"
+                            data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                            src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+                        <div class="card-body">
+                            <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                            </p>
+                            <ul>
+                                <li>C#</li>
+                                <li>Javascript</li>
+                                <li>SQL</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ul>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="github.com/meuprojeto"> <button type="button"
+                                            class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
+                                    <a href=""><button type="button"
+                                            class="btn btn-sm btn-outline-primary">Código</button></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top"
+                            data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                            src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+                        <div class="card-body">
+                            <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                            </p>
+                            <ul>
+                                <li>C#</li>
+                                <li>Javascript</li>
+                                <li>SQL</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ul>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="github.com/meuprojeto"> <button type="button"
+                                            class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
+                                    <a href=""><button type="button"
+                                            class="btn btn-sm btn-outline-primary">Código</button></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top"
+                            data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                            src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+                        <div class="card-body">
+                            <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                            </p>
+                            <ul>
+                                <li>C#</li>
+                                <li>Javascript</li>
+                                <li>SQL</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ul>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="github.com/meuprojeto"> <button type="button"
+                                            class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
+                                    <a href=""><button type="button"
+                                            class="btn btn-sm btn-outline-primary">Código</button></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </section>
-    </main>
-  
-  <footer></footer>
+    </div>
+
+    <!-- Sobre Mim -->
+    <section class="jumbotron text-center corPrimaria" id="sobre-mim">
+        <div class="container">
+            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
+            <p class="lead textoBranco">Olá sou Emerson, comecei na área a um pouco mais de um ano, inicialmente como
+                estágiario em Cobol,
+                posteriormente migrei para estágiario em Java, onde participei do projeto VEIC, na parte de prototipagem
+                utilizando a linguagem Java
+                e framework Java Server Faces na arquiterura Bradesco AWB 3.0.
+                Atualmente estou alocado no banco, no projeto BRAIN, que consiste em uma API rest utilizando tecnologias
+                como maven, Junit e Jax-rs.
+            </p>
+        </div>
+    </section>
+
+    <!--  Depoimentos  -->
+    <section class="jumbotron text-center" style="background-color:white !important" id="depoimentos">
+        <div class="container">
+            <h2 class="jumbotron-heading text-center titulosVerdes">
+                Depoimentos
+            </h2>
+            <blockquote class="blockquote text-center">
+                <p class="mb-0">É um profissional com um foco enorme em suas tarefas diárias, alem da
+                    simples dedicação do dia-a-dia na empresa.</p>
+                <footer class="blockquote-footer">CEO<cite title="Source Title"> Sony</cite>
+                </footer>
+            </blockquote>
+            <blockquote class="blockquote text-center">
+                <p class="mb-0">Um profissional super focado, dedicado, pontual com seus compromissos e ético.
+                    Interessado e super empolgado na área em que atua e nas demais, o que o torna um profissional
+                    pró-ativo e altamente eficiente.</p>
+                <footer class="blockquote-footer">Analista de Sistemas <cite title="Source Title">NuBank</cite>
+                </footer>
+            </blockquote>
+        </div>
+    </section>
+
+    <!--  Contato -->
+    <section class='corPrimaria' id="contato">
+        <div>
+            <div class="container-fluid">
+                <h3 style="padding-top:60px" class="text-center titulosBrancos">Contato</h3>
+                <a href="mailto:emersonfdasilva2@gmail.com">
+                    <h4 style="padding-bottom:60px;margin-bottom: 0px;" class="text-center">👉Emerson Ferreira da
+                        Silva👈</h4>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="text-center corSecundaria textoFooter">
+        <p class="textoBranco">Copyright 2019 </p>
+    </footer>
 </body>
+
 </html>
