--- a/index.html
+++ b/index.html
@@ -18,66 +18,8 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
         </script>
     <script src="https://kit.fontawesome.com/8dd542139c.js" crossorigin="anonymous"></script>
-    <style>
-        .foto-perfil {
-            height: 100%;
-            width: auto;
-            max-width: 100%;
-            border-radius: 50%;
-        }
-
-        .corPrimaria {
-            background-color: #333333;
-        }
-
-        .corSecundaria {
-            background-color: #2c3e50;
-        }
-
-        p {
-            font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-            color: black !important;
-            font-size: 13px;
-        }
-
-        .icones {
-            padding-left: 5px;
-        }
-
-        .titulosBrancos {
-            text-underline-position: below;
-            padding-bottom: 20px;
-            text-transform: uppercase;
-            font-weight: 500;
-            color: white;
-        }
-
-        .titulosVerdes {
-            text-underline-position: below;
-            padding-bottom: 16px;
-            text-transform: uppercase;
-            font-weight: 500;
-            color: #18bc9c;
-        }
-
-        .textoBranco {
-            color: white !important;
-        }
-
-        .jumbotron {
-            margin-bottom: 0px;
-        }
-
-        .textoFooter {
-            margin: 0px;
-            padding-top: 15px;
-            padding-bottom: 15px;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-    </style>
+        
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
@@ -100,7 +42,7 @@
                     <a class="nav-link textoBranco" href="#sobre-mim">Sobre mim</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textoBranco" href="#depoimentos">Depoimentos</a>
+                    <a class="nav-link textoBranco" href="#cursos">Cursos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textoBranco" href="#contato">Contato</a>
@@ -183,18 +125,16 @@
                             alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
                             src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
                         <div class="card-body">
-                            <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                            <p class="card-text"> Página clone apenas front-end
                             </p>
                             <ul>
-                                <li>C#</li>
-                                <li>Javascript</li>
-                                <li>SQL</li>
-                                <li>HTML</li>
+                                <li>HTML#</li>
                                 <li>CSS</li>
+                                <li>Flex-Box</li>
                             </ul>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a href="github.com/meuprojeto"> <button type="button"
+                                    <a href="https://peaceful-elion-f7e54a.netlify.com/o"> <button type="button"
                                             class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
                                     <a href=""><button type="button"
                                             class="btn btn-sm btn-outline-primary">Código</button></a>
@@ -211,18 +151,16 @@
                             alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
                             src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
                         <div class="card-body">
-                            <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                            <p class="card-text">Pagina Clone, portal de noticiais front-end.
                             </p>
                             <ul>
-                                <li>C#</li>
-                                <li>Javascript</li>
-                                <li>SQL</li>
                                 <li>HTML</li>
+                                <li>Javascript</li>
                                 <li>CSS</li>
                             </ul>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a href="github.com/meuprojeto"> <button type="button"
+                                    <a href="https://agitated-almeida-9256dc.netlify.com/" target="_blank"><button type="button"
                                             class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
                                     <a href=""><button type="button"
                                             class="btn btn-sm btn-outline-primary">Código</button></a>
@@ -239,18 +177,14 @@
                             alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
                             src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
                         <div class="card-body">
-                            <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                            <p class="card-text">Jogo snake em Javascript
                             </p>
                             <ul>
-                                <li>C#</li>
                                 <li>Javascript</li>
-                                <li>SQL</li>
-                                <li>HTML</li>
-                                <li>CSS</li>
                             </ul>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a href="github.com/meuprojeto"> <button type="button"
+                                    <a href="https://wizardly-goldstine-52eb58.netlify.com/"> <button type="button"
                                             class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
                                     <a href=""><button type="button"
                                             class="btn btn-sm btn-outline-primary">Código</button></a>
@@ -310,7 +244,7 @@
     <section class="jumbotron text-center" style="background-color:white !important" id="depoimentos">
         <div class="container">
             <h2 class="jumbotron-heading text-center titulosVerdes">
-                Depoimentos
+                Cursos
             </h2>
             <blockquote class="blockquote text-center">
                 <p class="mb-0">É um profissional com um foco enorme em suas tarefas diárias, alem da
