--- a/index.html
+++ b/index.html
@@ -199,20 +199,18 @@
                         <img class="card-img-top"
                             data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
                             alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-                            src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+                            src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true"> 
                         <div class="card-body">
-                            <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                            <p class="card-text"> portfólio com dados e projeto. 
                             </p>
                             <ul>
-                                <li>C#</li>
-                                <li>Javascript</li>
-                                <li>SQL</li>
                                 <li>HTML</li>
                                 <li>CSS</li>
+                                <li>Bootstrap</li>
                             </ul>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a href="github.com/meuprojeto"> <button type="button"
+                                    <a href="https://emfsilva.github.io/" target="_blank"> <button type="button"
                                             class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
                                     <a href=""><button type="button"
                                             class="btn btn-sm btn-outline-primary">Código</button></a>
