--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
               </ul>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a href="https://hardcore-mccarthy-c7e4fe.netlify.com/"> <button type="button"
+                  <a href="https://hardcore-mccarthy-c7e4fe.netlify.com/" target="_blank"> <button type="button"
                       class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
-                  <a href=""><button type="button" class="btn btn-sm btn-outline-primary">Código</button></a>
+                  <a href="https://github.com/emfsilva/jokempo" target="_blank"><button type="button"
+                      class="btn btn-sm btn-outline-primary">Código</button></a>
                 </div>
               </div>
             </div>
@@ -125,7 +126,7 @@
               alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
               src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
             <div class="card-body">
-              <p class="card-text"> Página clone apenas front-end
+              <p class="card-text"> Página clone site medicos apenas front-end
               </p>
               <ul>
                 <li>HTML#</li>
@@ -134,9 +135,10 @@
               </ul>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a href="https://peaceful-elion-f7e54a.netlify.com/o"> <button type="button"
+                  <a href="https://peaceful-elion-f7e54a.netlify.com/o" target="_blank"> <button type="button"
                       class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
-                  <a href=""><button type="button" class="btn btn-sm btn-outline-primary">Código</button></a>
+                  <a href="https://github.com/emfsilva/mediCenter" target="_blank"><button type="button"
+                      class="btn btn-sm btn-outline-primary">Código</button></a>
                 </div>
               </div>
             </div>
@@ -161,7 +163,8 @@
                 <div class="btn-group">
                   <a href="https://agitated-almeida-9256dc.netlify.com/" target="_blank"><button type="button"
                       class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
-                  <a href=""><button type="button" class="btn btn-sm btn-outline-primary">Código</button></a>
+                  <a href="https://github.com/emfsilva/MegaPortal" target="_blank"><button type="button"
+                      class="btn btn-sm btn-outline-primary">Código</button></a>
                 </div>
               </div>
             </div>
@@ -182,9 +185,10 @@
               </ul>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a href="https://wizardly-goldstine-52eb58.netlify.com/"> <button type="button"
+                  <a href="https://wizardly-goldstine-52eb58.netlify.com/" target="_blank"> <button type="button"
                       class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
-                  <a href=""><button type="button" class="btn btn-sm btn-outline-primary">Código</button></a>
+                  <a href="https://github.com/emfsilva/snakeGame" target="_blank"><button type="button"
+                      class="btn btn-sm btn-outline-primary">Código</button></a>
                 </div>
               </div>
             </div>
@@ -209,7 +213,8 @@
                 <div class="btn-group">
                   <a href="https://emfsilva.github.io/" target="_blank"> <button type="button"
                       class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
-                  <a href=""><button type="button" class="btn btn-sm btn-outline-primary">Código</button></a>
+                  <a href="https://github.com/emfsilva/emfsilva.github.io" target="_blank"><button type="button"
+                      class="btn btn-sm btn-outline-primary">Código</button></a>
                 </div>
               </div>
             </div>
@@ -235,24 +240,39 @@
   </section>
 
   <!--  Depoimentos  -->
-  <section class="jumbotron text-center" style="background-color:white !important" id="depoimentos">
+  <section class="jumbotron" style="background-color:white !important" id="cursos">
     <div class="container">
       <h2 class="jumbotron-heading text-center titulosVerdes">
         Cursos
       </h2>
-      <blockquote class="blockquote text-center">
-        <p class="mb-0">É um profissional com um foco enorme em suas tarefas diárias, alem da
-          simples dedicação do dia-a-dia na empresa.</p>
-        <footer class="blockquote-footer">CEO<cite title="Source Title"> Sony</cite>
-        </footer>
-      </blockquote>
-      <blockquote class="blockquote text-center">
-        <p class="mb-0">Um profissional super focado, dedicado, pontual com seus compromissos e ético.
-          Interessado e super empolgado na área em que atua e nas demais, o que o torna um profissional
-          pró-ativo e altamente eficiente.</p>
-        <footer class="blockquote-footer">Analista de Sistemas <cite title="Source Title">NuBank</cite>
-        </footer>
-      </blockquote>
+      <table class="table">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">Curso</th>
+              <th scope="col">Organização</th>
+              <th scope="col">Término</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Java</td>
+              <td>Alura</td>
+              <td>2019</td>
+            </tr>
+            <tr>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table>
+        
+
     </div>
   </section>
 
