--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Meu portfólio</title>
+  <title>Emerson</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
@@ -23,8 +23,8 @@
 </head>
 
 <body>
-  <nav class="corSecundaria navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand textoBranco" href="#">Emerson Ferreira da Silva</a>
+  <nav class="corSecundaria navbar navbar-expand-lg navbar-light fixed-top">
+    <a class="navbar-brand textoBranco" href="">Emerson Ferreira da Silva</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -36,6 +36,9 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link textoBranco" href="#home">Home</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link textoBranco" href="#projetos">Projetos</a>
         </li>
         <li class="nav-item">
@@ -45,18 +48,18 @@
           <a class="nav-link textoBranco" href="#cursos">Cursos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link textoBranco" href="#contato">Contato</a>
+          <a class="nav-link textoBranco" href="#curriculo">Curriculo</a>
         </li>
       </ul>
     </div>
   </nav>
-  <section class="jumbotron text-center corPrimaria">
+  <section class="jumbotron text-center corPrimaria" id="home">
     <div class="container">
       <img class="foto-perfil" src="" alt="">
       <h1 class="jumbotron-heading textoBranco">Emerson Ferreira da Silva</h1>
       <p class="lead textoBranco">Programador Júnior</p>
       <p>
-        <a href="#contato" class="btn btn-dark my-2">Contato</a>
+        <a href="#curriculo" class="btn btn-dark my-2">Baixar Curriculo</a>
       </p>
       <a href="https://www.linkedin.com/in/emersonferreirasilva1992/" target="_blank"> <i
           class="textoBranco fab fa-linkedin"></i></a>
@@ -73,7 +76,7 @@
             <img class="card-img-top"
               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
               alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-              src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+              src="assets/images/twitter.png" data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">Projeto utilizando clone do twitter, apenas front - end (Em Andamento)
               </p>
@@ -99,7 +102,7 @@
             <img class="card-img-top"
               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
               alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-              src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+              src="assets/images/jokenpo.png" data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">Este projeto consiste em um jogo chamado de jokempo, são 3 opçãos, pedra, papel e
                 tesoura.
@@ -124,18 +127,18 @@
             <img class="card-img-top"
               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
               alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-              src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+              src="assets/images/medicalcenter.png" data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text"> Página clone site medicos apenas front-end
               </p>
               <ul>
-                <li>HTML#</li>
+                <li>HTML</li>
                 <li>CSS</li>
                 <li>Flex-Box</li>
               </ul>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a href="https://peaceful-elion-f7e54a.netlify.com/o" target="_blank"> <button type="button"
+                  <a href="https://peaceful-elion-f7e54a.netlify.com/" target="_blank"> <button type="button"
                       class="btn btn-sm btn-outline-success">Ver Projeto</button></a>
                   <a href="https://github.com/emfsilva/mediCenter" target="_blank"><button type="button"
                       class="btn btn-sm btn-outline-primary">Código</button></a>
@@ -150,7 +153,7 @@
             <img class="card-img-top"
               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
               alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-              src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+              src="assets/images/megaportal.png" data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">Pagina Clone, portal de noticiais front-end.
               </p>
@@ -176,7 +179,7 @@
             <img class="card-img-top"
               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
               alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-              src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+              src="assets/images/snake.png" data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">Jogo snake em Javascript
               </p>
@@ -200,7 +203,7 @@
             <img class="card-img-top"
               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
               alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-              src="https://i.ytimg.com/vi/jk8L4_Wx40U/maxresdefault.jpg" data-holder-rendered="true">
+              src="assets/images/portfolio.png" data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text"> portfólio com dados e projeto.
               </p>
@@ -225,73 +228,128 @@
   </div>
 
   <!-- Sobre Mim -->
+
   <section class="jumbotron text-center corPrimaria" id="sobre-mim">
     <div class="container">
       <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
-      <p class="lead textoBranco">Olá sou Emerson, comecei na área a um pouco mais de um ano, inicialmente como
+      <p class="lead textoBranco" align="justify"> Olá sou Emerson, tenho 27 nos, sou formado em Análise e Desenvolvimento de Sistemas
+        pela UNINOVE, comecei na área de programação a um pouco mais de um ano, inicialmente como
         estágiario em Cobol,
         posteriormente migrei para estágiario em Java, onde participei do projeto VEIC, na parte de prototipagem
         utilizando a linguagem Java
-        e framework Java Server Faces na arquiterura Bradesco AWB 3.0.
-        Atualmente estou alocado no banco, no projeto BRAIN, que consiste em uma API rest utilizando tecnologias
-        como maven, Junit e Jax-rs.
+        e framework Java Server Faces com a arquiterura Bradesco AWB 3.0. <br>
+        Atualmente estou alocado no cliente Bradesco, no projeto BRAIN, um projeto piloto que consiste em uma API Rest,
+        utilizando a linguagem java, metodologia ágil, e esteira de entrega contínua.
       </p>
     </div>
   </section>
 
-  <!--  Depoimentos  -->
+  <!--  Cursos  -->
+
   <section class="jumbotron" style="background-color:white !important" id="cursos">
     <div class="container">
       <h2 class="jumbotron-heading text-center titulosVerdes">
         Cursos
       </h2>
       <table class="table">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col">Curso</th>
-              <th scope="col">Organização</th>
-              <th scope="col">Término</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Java</td>
-              <td>Alura</td>
-              <td>2019</td>
-            </tr>
-            <tr>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
-        
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Curso</th>
+            <th scope="col">Organização</th>
+            <th scope="col">Término</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td> Introdução ao GitHub e comandos essenciais para trabalhar em equipe.</td>
+            <td>Digital Innovation One</td>
+            <td>09/2019</td>
+          </tr>
+          <tr>
+            <td>Introdução ao Git e Controle de Versões</td>
+            <td>Digital Innovation One</td>
+            <td>09/2019</td>
+          </tr>
+          <tr>
+            <td>Programação para Internet com JavaScript</td>
+            <td>Digital Innovation One</td>
+            <td>09/2019</td>
+          </tr>
+          <tr>
+            <td>JAVA E JSF I: SUA APLICAÇÃO WEB COM JSF2</td>
+            <td>Alura Cursos Online</td>
+            <td>05/2019</td>
+          </tr>
+          <tr>
+            <td>JAVA PARTE 7: TRABALHANDO COM JAVA.IO</td>
+            <td>Alura Cursos Online</td>
+            <td>05/2019</td>
+          </tr>
+          <tr>
+            <td>JAVA PARTE 6: CONHECENDO O JAVA.UTIL</td>
+            <td>Alura Cursos Online</td>
+            <td>05/2019</td>
+          </tr>
+          <tr>
+            <td>JAVA PARTE 5: PACOTES E JAVA.LANG</td>
+            <td>Alura Cursos Online</td>
+            <td>05/2019</td>
+          </tr>
+          <tr>
+            <td>JAVA PARTE 4: ENTENDENDO EXCEÇÕES</td>
+            <td>Alura Cursos Online</td>
+            <td>05/2019</td>
+          </tr>
+          <tr>
+            <td>JAVA PARTE 3: ENTENDENDO HERANÇA E INTERFACE</td>
+            <td>Alura Cursos Online</td>
+            <td>05/2019</td>
+          </tr>
+          <tr>
+            <td>JAVA PARTE 2: INTRODUÇÃO À ORIENTAÇÃO A OBJETOS</td>
+            <td>Alura Cursos Online</td>
+            <td>04/2019</td>
+          </tr>
+          <tr>
+            <td>JAVA PARTE 1: PRIMEIROS PASSOS</td>
+            <td>Alura Cursos Online</td>
+            <td>04/2019</td>
+          </tr>
+          <tr>
+            <td>LINUX I: CONHECENDO E UTILIZANDO O TERMINAL</td>
+            <td>Alura Cursos Online</td>
+            <td>04/2019</td>
+          </tr>
+          <tr>
+            <td>UML INTRODUÇÃO: MODELAGEM DE SOLUÇÕES</td>
+            <td>Alura Cursos Online</td>
+            <td>04/2019</td>
+          </tr>
+        </tbody>
+      </table>
+
 
     </div>
   </section>
 
-  <!--  Contato -->
-  <section class='corPrimaria' id="contato">
+  <!--  Curriculo -->
+  <section class='corPrimaria' id="curriculo">
     <div>
       <div class="container-fluid">
-        <h3 style="padding-top:60px" class="text-center titulosBrancos">Contato</h3>
-        <a href="mailto:emersonfdasilva2@gmail.com">
-          <h4 style="padding-bottom:60px;margin-bottom: 0px;" class="text-center">👉Emerson Ferreira da
-            Silva👈</h4>
+        <h3 style="padding-top:60px" class="text-center titulosBrancos">Curriculo</h3>
+          <h4 style="padding-bottom:60px;margin-bottom: 0px;" class="text-center">
+            <a class="btn btn-dark my-2" href="assets/Download/CurriculoEmersonFerreira.pdf" download="CurriculoEmersonFerreira.pdf">DownLoad Curriculo</a>
+          </h4>
         </a>
+
+        
       </div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="text-center corSecundaria textoFooter">
-    <p class="textoBranco">Copyright 2019 </p>
+    <p class="textoBranco">Copyright 2019 - Emerson Ferreira da Silva </p>
   </footer>
 </body>
 
