Alteração sobre mim

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
           <a class="nav-link textoBranco" href="#home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link textoBranco" href="#projetos">Projetos</a>
+          <a class="nav-link textoBranco" href="#sobre-mim">Sobre mim</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link textoBranco" href="#sobre-mim">Sobre mim</a>
+          <a class="nav-link textoBranco" href="#projetos">Projetos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link textoBranco" href="#cursos">Cursos</a>
@@ -66,9 +66,27 @@
       <a href="https://github.com/emfsilva" target="_blank"><i class="textoBranco icones fab fa-github"></i></a>
     </div>
   </section>
-  <div class="album py-5 bg-light" id="projetos">
+
+   <!-- Sobre Mim -->
+
+   <section class="jumbotron text-center bg-light" id="sobre-mim">
     <div class="container">
-      <h2 class="jumbotron-heading text-center titulosVerdes">Projetos</h2>
+      <h2 class="jumbotron-heading titulosPretos">Sobre mim</h2>
+      <p class="lead" align="justify"> Olá sou Emerson, tenho 27 nos, sou formado em Análise e Desenvolvimento de Sistemas
+        pela UNINOVE, comecei na área de programação a um pouco mais de um ano, inicialmente como
+        estágiario em Cobol,
+        posteriormente migrei para estágiario em Java, onde participei do projeto VEIC, na parte de prototipagem
+        utilizando a linguagem Java
+        e framework Java Server Faces com a arquiterura Bradesco AWB 3.0. <br>
+        Atualmente estou alocado no cliente Bradesco, no projeto BRAIN, um projeto piloto que consiste em uma API Rest,
+        utilizando a linguagem java, metodologia ágil, e esteira de entrega contínua.
+      </p>
+    </div>
+  </section>
+
+  <div class="album py-5 corPrimaria " id="projetos">
+    <div class="container">
+      <h2 class="jumbotron-heading text-center titulosBrancos">Projetos</h2>
       <div class="row">
 
         <div class="col-md-4">
@@ -104,7 +122,7 @@
               alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
               src="assets/images/jokenpo.png" data-holder-rendered="true">
             <div class="card-body">
-              <p class="card-text">Este projeto consiste em um jogo chamado de jokempo, são 3 opçãos, pedra, papel e
+              <p class="card-text">Este projeto consiste em um jogo chamado de jokempo, são 3 opções, pedra, papel e
                 tesoura.
                 Pedra ganha de tesoura, tesoura de papel e papel de pedra.
               </p>
@@ -227,28 +245,11 @@
     </div>
   </div>
 
-  <!-- Sobre Mim -->
-
-  <section class="jumbotron text-center corPrimaria" id="sobre-mim">
-    <div class="container">
-      <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
-      <p class="lead textoBranco" align="justify"> Olá sou Emerson, tenho 27 nos, sou formado em Análise e Desenvolvimento de Sistemas
-        pela UNINOVE, comecei na área de programação a um pouco mais de um ano, inicialmente como
-        estágiario em Cobol,
-        posteriormente migrei para estágiario em Java, onde participei do projeto VEIC, na parte de prototipagem
-        utilizando a linguagem Java
-        e framework Java Server Faces com a arquiterura Bradesco AWB 3.0. <br>
-        Atualmente estou alocado no cliente Bradesco, no projeto BRAIN, um projeto piloto que consiste em uma API Rest,
-        utilizando a linguagem java, metodologia ágil, e esteira de entrega contínua.
-      </p>
-    </div>
-  </section>
-
   <!--  Cursos  -->
 
-  <section class="jumbotron" style="background-color:white !important" id="cursos">
+  <section class="jumbotron bg-light" style="background-color:white !important" id="cursos">
     <div class="container">
-      <h2 class="jumbotron-heading text-center titulosVerdes">
+      <h2 class="jumbotron-heading text-center titulosPretos">
         Cursos
       </h2>
       <table class="table">
@@ -341,8 +342,6 @@
             <a class="btn btn-dark my-2" href="assets/Download/CurriculoEmersonFerreira.pdf" download="CurriculoEmersonFerreira.pdf">DownLoad Curriculo</a>
           </h4>
         </a>
-
-        
       </div>
     </div>
   </section>
