--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       <div class="container-fluid">
         <h3 style="padding-top:60px" class="text-center titulosBrancos">Curriculo</h3>
           <h4 style="padding-bottom:60px;margin-bottom: 0px;" class="text-center">
-            <a class="btn btn-dark my-2" href="assets/Download/CurriculoEmersonFerreira.pdf" download="CurriculoEmersonFerreira.pdf">DownLoad Curriculo</a>
+            <a class="btn btn-dark my-2" href="assets/Download/CurriculoEmersonFerreira.pdf" download="CurriculoEmersonFerreira.pdf">Download Curriculo</a>
           </h4>
         </a>
       </div>
