--- a/index.html
+++ b/index.html
@@ -277,59 +277,58 @@
             <td>09/2019</td>
           </tr>
           <tr>
-            <td>JAVA E JSF I: SUA APLICAÇÃO WEB COM JSF2</td>
+            <td>Java e JSF I: Sua Aplicação Web Com JSF2</td>
             <td>Alura Cursos Online</td>
             <td>05/2019</td>
           </tr>
           <tr>
-            <td>JAVA PARTE 7: TRABALHANDO COM JAVA.IO</td>
+            <td>Java Parte 7: Trabalhando Com JAVA.IO</td>
             <td>Alura Cursos Online</td>
             <td>05/2019</td>
           </tr>
           <tr>
-            <td>JAVA PARTE 6: CONHECENDO O JAVA.UTIL</td>
+            <td>Java Parte 6: Conhecendo o JAVA.UTIL</td>
             <td>Alura Cursos Online</td>
             <td>05/2019</td>
           </tr>
           <tr>
-            <td>JAVA PARTE 5: PACOTES E JAVA.LANG</td>
+            <td>Java Parte 5: Pacotes e JAVA.LANG</td>
             <td>Alura Cursos Online</td>
             <td>05/2019</td>
           </tr>
           <tr>
-            <td>JAVA PARTE 4: ENTENDENDO EXCEÇÕES</td>
+            <td>Java Parte 4: Entendendo exceções</td>
             <td>Alura Cursos Online</td>
             <td>05/2019</td>
           </tr>
           <tr>
-            <td>JAVA PARTE 3: ENTENDENDO HERANÇA E INTERFACE</td>
+            <td>Java Parte 3: Entendendo Herança e Interface</td>
             <td>Alura Cursos Online</td>
             <td>05/2019</td>
           </tr>
           <tr>
-            <td>JAVA PARTE 2: INTRODUÇÃO À ORIENTAÇÃO A OBJETOS</td>
+            <td>Java Parte 2: Introdução à Orientação a Objetos</td>
             <td>Alura Cursos Online</td>
             <td>04/2019</td>
           </tr>
           <tr>
-            <td>JAVA PARTE 1: PRIMEIROS PASSOS</td>
+            <td>Java Parte 1: Primeiros Passos</td>
             <td>Alura Cursos Online</td>
             <td>04/2019</td>
           </tr>
           <tr>
-            <td>LINUX I: CONHECENDO E UTILIZANDO O TERMINAL</td>
+            <td>Linux I: Conhecendo e Utilizando o Terminal</td>
             <td>Alura Cursos Online</td>
             <td>04/2019</td>
           </tr>
           <tr>
-            <td>UML INTRODUÇÃO: MODELAGEM DE SOLUÇÕES</td>
+            <td>UML Introdução: Modelagem De Soluções</td>
             <td>Alura Cursos Online</td>
             <td>04/2019</td>
           </tr>
         </tbody>
       </table>
-
-
+      
     </div>
   </section>
 
