modificando quem sou eu

--- a/index.html
+++ b/index.html
@@ -72,14 +72,12 @@
    <section class="jumbotron text-center bg-light" id="sobre-mim">
     <div class="container">
       <h2 class="jumbotron-heading titulosPretos">Sobre mim</h2>
-      <p class="lead" align="justify"> Olá sou Emerson, tenho 27 nos, sou formado em Análise e Desenvolvimento de Sistemas
-        pela UNINOVE, comecei na área de programação a um pouco mais de um ano, inicialmente como
-        estágiario em Cobol,
-        posteriormente migrei para estágiario em Java, onde participei do projeto VEIC, na parte de prototipagem
-        utilizando a linguagem Java
-        e framework Java Server Faces com a arquiterura Bradesco AWB 3.0. <br>
-        Atualmente estou alocado no cliente Bradesco, no projeto BRAIN, um projeto piloto que consiste em uma API Rest,
-        utilizando a linguagem java, metodologia ágil, e esteira de entrega contínua.
+      <p class="lead" align="justify">Eu sou Emerson, tenho 27 nos, sou formado em Análise e Desenvolvimento
+        de Sistemas pela UNINOVE, comecei a carreia como estagiario em cobol na BRQ, posteriormente migrei para
+        estagiario em java, onde participei de um projeto de prototipagem com linguagem java, utilizando framework 
+        JSF com arquitetura Bradesco AWB 3.0. 
+          Atualmente trabalho no grupo cruzeiro do sul como programador junior, utilizando linguagem java JSF com
+          primefaces, banco de dados oracle.
       </p>
     </div>
   </section>
